<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>


    <!--Main UI-->

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>

    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Whipped cream topping [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped cream</string>

    <!-- Chocolate topping [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>

    <!-- Title for the quantity [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Display quantity value [CHAR LIMIT=5] -->
    <string name="initial_quantity_value">0</string>

    <!-- Minus button [CHAR LIMIT=5] -->
    <string name="minus_button">-</string>

    <!-- Plus button [CHAR LIMIT=5] -->
    <string name="plus_button">+</string>

    <!-- Order button [CHAR LIMIT=12] -->
    <string name="order">Order</string>


    <!--Email Order Summary-->

    <!--Email letter recipient line for the order summary email.-->
    <string name="mailto">mailto:</string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">
        Just Java order for <xliff:g example="Amy" id="name">%s</xliff:g>
    </string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_customer_name">
        Customer Name: <xliff:g example="Amy" id="customer_name">%s</xliff:g>
    </string>

    <!--
      Whipped cream topping for the order summary. It will be shown in the format of
      "Add whipped cream? yes" or "Add whipped cream? no". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">
        Add whipped cream? <xliff:g example="true" id="addWhippedCream">%s</xliff:g>
    </string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? yes" or "Add chocolate? no". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">
        Add chocolate? <xliff:g example="true" id="addChocolate">%s</xliff:g>
    </string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">
        Quantity: <xliff:g example="2" id="quantity">%d</xliff:g>
    </string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">
        Total price: <xliff:g example="$10" id="price">%s</xliff:g>
    </string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="order_summary_thank_you">Thank you!</string>

    <!-- Will show "yes" if the customer wants to add some topping. [CHAR LIMIT=12] -->
    <string name="order_summary_yes">yes</string>

    <!-- Will show "no" if the customer doesn't want to add some topping. [CHAR LIMIT=12] -->
    <string name="order_summary_no">no</string>

</resources>
